# request_bot

./: .gitignore  bot.ini.example  pyproject.toml
apps_bot/: __main__.py  config.py
apps_bot/db/: operations.py  setup.py
apps_bot/db/tables/: base.py  user.py
apps_bot/filters/: name_validation.py
apps_bot/handlers/: registration.py  send_question.py
apps_bot/middlewares/: check_registration.py
apps_bot/states/: question.py  registration.py
